--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,3 +1,12 @@
+html, body {
+    height:100%;
+}
+
+.container{
+	min-height: 100%;
+	background-color: rgba(255, 255, 255, 0.5);
+}
+
 .profile-avatar{
   display: block;
   margin: auto;
