--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,7 +2,8 @@
 @import url("custom.css");
 body {
   font-family: "Roboto Condensed", Arial, sans-serif;
-  background: url("/static/img/subtle_dots.png");
+  background: url("/static/img/sand_stone.jpg");
+  background-attachment: fixed;
   line-height: 1.5em;
   font-weight: 300;
   font-size: 16px;
@@ -42,7 +43,7 @@ a:hover {
 
 /* Layout */
 .main-layout {
-  background: #fff;
+  background: rgba(255, 255, 255, 0);
 }
 .sidebar-nav {
   margin: 0;
@@ -77,7 +78,7 @@ footer {
   margin-top: 10px;
   margin-bottom: 3em;
   padding-top: 10px;
-  color: #C2C2C2;
+  color: #000;
   font-size: 11px;
   bottom: 0;
   padding-bottom: 10px;
@@ -96,7 +97,7 @@ div.col-sm-3 strong {
 }
 div.col-sm-3 div.profile-about {
   margin-top: 10px;
-  color: #8C8C8C;
+  color: #000;
 }
 div.col-sm-3 img.profile-avatar {
   border-radius: 150px;
