--- a/static/css/main.css
+++ b/static/css/main.css
@@ -86,8 +86,8 @@ footer {
 
 /* Left column */
 div.col-sm-3 {
-  margin-top: 100px;
-  font-size: 13px;
+  margin-top: 30px;
+  /*font-size: 13px;*/
   color: #666;
 }
 div.col-sm-3 strong {
@@ -107,6 +107,8 @@ div.col-sm-3 img.profile-avatar {
   -o-border-radius: 150px;
   margin-left: auto;
   margin-right: auto;
+  width: 137px;
+  height: 137px;
 }
 
 /* Pagination */
