--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,9 +100,7 @@ layout: compress
     <link rel="stylesheet" href="/static/css/main.css">
   </head>
   <body>
-    <div class="container">
-      <div class="col-sm-3">
-        <div class="fixed-condition">
+      <div class="sidebar fixed-condition ">
           <a href="/"><img class="profile-avatar" src="{{ site.avatar_url }}" height="75px" width="75px" /></a>
           <a href="/"><h1 class="author-name">{{ site.author }}</h1></a>
           <hr/>
@@ -131,10 +129,9 @@ layout: compress
               <li><a class="about" href="{{ i.url }}">{{ i.text }}</a></li>
             {% endfor %}
           </ul>
-        </div>
-        <!-- end /.fixed-condition -->
       </div>
-      <div class="col-sm-9 col-offset-1 main-layout">
+      <!-- end sidebar -->
+      <div class="container">
         {{ content }}
         <footer>
           &copy; {{ site.author }}
@@ -147,9 +144,7 @@ layout: compress
           </div>
         </footer>
       </div>
-      <!-- end /.col-sm-8 -->
-    </div>
-    <!-- end /.container -->
+      <!-- end container -->
 
     <!-- Bootstrap core JavaScript -->
     <!-- Placed at the end of the document so the pages load faster -->
