--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,10 +1,29 @@
 html, body {
-    height:100%;
+    min-height:100%;
 }
 
 .container{
 	min-height: 100%;
-	background-color: rgba(255, 255, 255, 0.5);
+    background-color: #fff;
+    width: auto !important;
+}
+
+/* Responsive Conditional */
+@media (min-width: 1024px) {
+  .container{
+    margin-left: 36rem;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 30px;
+    padding-bottom: 10px;
+  }
+}
+
+.post{
+	font-family: "Roboto Condensed", Arial, sans-serif;
+	line-height: 1.5em;
+    font-weight: 300;
+    font-size: 20px;
 }
 
 .profile-avatar{
@@ -14,4 +33,5 @@ html, body {
 
 .author-name{
 	text-align: center;
+	color: #ddd;
 }
