--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,7 @@ layout: default
 {% endif %}
 
 <div class="content">
+  {% include ads.html %}
   <div class="post">{{ content }}</div>
   {% include share-page.html %}
 </div>
