--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -7,7 +7,7 @@ html, body {
     background-color: #fff;
     width: auto !important;
     margin: 0;
-    padding: 10px 5px;
+    padding: 10px;
 }
 
 /* Responsive Conditional */
