Adding read mode button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,9 @@ layout: default
 {% endif %}
 
 <div class="content">
-  {% include ads.html %}
+  <div class="banneradtop">
+    {% include ads.html %}
+  </div>
   <div class="post">{{ content }}</div>
   {% include share-page.html %}
 </div>
