--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,7 +100,7 @@ layout: compress
     <link rel="stylesheet" href="/static/css/main.css">
   </head>
   <body>
-    <div class="sidebar fixed-condition ">
+    <div class="sidebar fixed-condition">
       <div class="inside">
         <a href="/"><img class="profile-avatar" src="{{ site.avatar_url }}" height="75px" width="75px" /></a>
         <a href="/"><h1 class="author-name">{{ site.author }}</h1></a>
@@ -136,6 +136,10 @@ layout: compress
     </div>
     <!-- end sidebar -->
     <div class="container">
+      <div class="btnGroup">
+        <a href="#" class="read-button borderbtn flright"><i class="fa fa-book" aria-hidden="true"></i> Read Mode</a>
+        <a href="/" class="borderbtn flright"><i class="fa fa-home" aria-hidden="true"></i> Home</a>&nbsp;&nbsp;
+      </div>
       <div class="large" id="large">
         <ul class="search__results" id="js-search__results__large"></ul>
       </div>
@@ -158,6 +162,7 @@ layout: compress
     <script src="/static/js/super-search-2.js"></script>
     <script src="/static/js/thickbox-compressed.js"></script>
     <script src="/static/js/projects.js"></script>
+    <script src="/static/js/read-mode.js"></script>
     <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
