--- a/static/css/main.css
+++ b/static/css/main.css
@@ -31,9 +31,9 @@ h1 {
 h2, h3 {
   margin-bottom: 5px;
 }
-a, a:link, a:active {
+a, a:link, a:active, a:visited {
   text-decoration: none;
-  color: #3fa757;
+  color: #3fa757 !important;
 }
 a:hover {
   color: #B3B3B3;
