Adding back to top, fixing disqus not show again after read mode

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,6 @@
 /* Custom CSS ================================== */
 @import url("custom.css");
+@import url("to-top.css");
 body {
   font-family: "Roboto Condensed", Arial, sans-serif;
   background-color: #fff;
