--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,10 +136,6 @@ layout: compress
     </div>
     <!-- end sidebar -->
     <div class="container">
-      <div class="btnGroup">
-        <a href="#" class="read-button borderbtn flright"><i class="fa fa-book" aria-hidden="true"></i> Read Mode</a>
-        <a href="/" class="borderbtn flright"><i class="fa fa-home" aria-hidden="true"></i> Home</a>&nbsp;&nbsp;
-      </div>
       <div class="large" id="large">
         <ul class="search__results" id="js-search__results__large"></ul>
       </div>
@@ -153,6 +149,8 @@ layout: compress
     </div>
     <!-- end container -->
 
+    <div class="elevator-wrapper"></div>
+
     <!-- Bootstrap core JavaScript -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -163,6 +161,7 @@ layout: compress
     <script src="/static/js/thickbox-compressed.js"></script>
     <script src="/static/js/projects.js"></script>
     <script src="/static/js/read-mode.js"></script>
+    <script src="/static/js/to-top.js"></script>
     <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
