--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 ---
+<div class="btnGroup">
+  <a href="#" class="read-button borderbtn flright"><i class="fa fa-book" aria-hidden="true"></i> Read Mode</a>
+  <a href="/" class="borderbtn flright"><i class="fa fa-home" aria-hidden="true"></i> Home</a>&nbsp;&nbsp;
+</div>
 <header class="post-header">
   <h1 class="post-title">{{ page.title }}</h1>
 </header>
