Change article color when read mode active

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -63,9 +63,15 @@ html, body {
 }
 
 .read-mode{
+  color: #000;
+  text-align: justify !important;
   padding: 100px !important;
   margin: 6% 20% !important;
   box-shadow: 10px 10px 10px #888;
+}
+
+.read-mode .container>.content>.post h2, h3{
+  color: #000;
 }
 
 .flright{
