Small update style, this blog will alive again!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,7 +112,7 @@ layout: compress
           </div>
         {% endif %}
         <div class="social">
-          <ul><li>Follow Me:</li></ul>
+          <ul><li>Contact :</li></ul>
           <ul>
             {% for link in site.social %}
               <li><a href="{{ link.link }}" target="_blank"><i class="fa {{ link.icon }}"></i></a></li>
@@ -142,7 +142,7 @@ layout: compress
       </div>
       {{ content }}
       <footer>
-      &copy; 2017 {{ site.title }}
+      &copy; 2017 - 2018 {{ site.title }}
       {% if site.github %}
         - <a href="{{ site.github }}">{{ site.github }}</a> | Built with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> | Hosted on <a href="https://github.com/" target="_blank">GitHub</a>
       {% endif %}
