--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="btnGroup">
   <a href="#" class="read-button borderbtn flright"><i class="fa fa-book" aria-hidden="true"></i> Read Mode</a>
-  <a href="/" class="borderbtn flright"><i class="fa fa-home" aria-hidden="true"></i> Home</a>&nbsp;&nbsp;
+  <a href="/" class="borderbtn flleft"><i class="fa fa-home" aria-hidden="true"></i> Home</a>&nbsp;&nbsp;
 </div>
 <header class="post-header">
   <h1 class="post-title">{{ page.title }}</h1>
@@ -17,9 +17,9 @@ layout: default
 {% endif %}
 
 <div class="content">
-  <div class="banneradtop">
+  <!--div class="banneradtop">
     {% include ads.html %}
-  </div>
+  </div-->
   <div class="post">{{ content }}</div>
   {% include share-page.html %}
 </div>
