--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -59,7 +59,7 @@ html, body {
 
 .author-name{
 	text-align: center;
-	color: #ddd;
+	color: #ddd !important;
 }
 
 @media (min-width: 1024px) {
@@ -89,7 +89,12 @@ html, body {
 
 .flright{
   float: right;
-  margin: 10px;
+  margin: 10px 0px 10px 10px;
+}
+
+.flleft{
+  float: left;
+  margin: 10px 10px 10px 0px;
 }
 
 .borderbtn {
@@ -102,4 +107,18 @@ html, body {
 
 .x-margin{
   margin-top: -30px;
+}
+
+.index-h1{
+  text-decoration: none;
+  font-size: 32px;
+}
+
+.post-divider{
+  margin: 50px 0px 50px 0px;
+}
+
+.pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus {
+  background-color: #d6d6d6 !important;
+  border-color: #d4d4d4 !important;
 }
