--- a/static/css/main.css
+++ b/static/css/main.css
@@ -16,11 +16,13 @@ hr {
   border-top: 1px solid #F7F1F1;
   border-bottom: 1px solid #fff;
 }
+/*
 span.time, span.categories {
   color: #ADADAD;
   margin-bottom: 5px;
   font-size: 11px;
 }
+*/
 h1, h2, h3 {
   color: #696969;
   font-weight: normal;
