--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,6 +99,15 @@ layout: compress
     <link rel="stylesheet" href="/static/css/thickbox.css">
     <link rel="stylesheet" href="/static/css/projects.css">
     <link rel="stylesheet" href="/static/css/main.css">
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-4347207553940665",
+      enable_page_level_ads: true
+      });
+    </script>
+    
   </head>
   <body>
     <div class="sidebar fixed-condition">
